# tildeling-af-sygeplejeartikler-til-terminale-borgere

./: .gitignore  README.md  main.py  pyproject.toml
process/: config.py
